--- a/www.nass.gov.ng/8c59c2071b894949306af3a5db7e2a66a6b80cc4.yml
+++ b/www.nass.gov.ng/8c59c2071b894949306af3a5db7e2a66a6b80cc4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 22:43:10 GMT
+    - Tue, 21 Aug 2018 18:08:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7YIDhD%2CWN%2CuzFZyEgCJWX1; path=/
+    - PHPSESSID=lsNsvbD2lH4vD7m4xRQY71; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 22:43:11 GMT
+recorded_at: Tue, 21 Aug 2018 18:08:17 GMT
