--- a/www.nass.gov.ng/f864ac18e7ad290de8ea5b5dab688a5556e8b20d.yml
+++ b/www.nass.gov.ng/f864ac18e7ad290de8ea5b5dab688a5556e8b20d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 23:08:49 GMT
+    - Tue, 21 Aug 2018 18:31:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kcYhR-5NHw1QjB4M0d6aF1; path=/
+    - PHPSESSID=rFlqjlIXa%2CpsgqWx57djb2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 23:08:50 GMT
+recorded_at: Tue, 21 Aug 2018 18:31:56 GMT
