--- a/www.nass.gov.ng/9f482ad8a2705cfef53148d781ce821e48e4d450.yml
+++ b/www.nass.gov.ng/9f482ad8a2705cfef53148d781ce821e48e4d450.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 23:16:31 GMT
+    - Tue, 21 Aug 2018 18:39:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CyrkXNfwdZf0A7WB6ibXK3; path=/
+    - PHPSESSID=9wR%2CX587Huk4rO7uggpxL2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 23:16:32 GMT
+recorded_at: Tue, 21 Aug 2018 18:39:20 GMT
