--- a/www.nass.gov.ng/f681dbd6c1e834b6ae370b2fe9aecfedc795aae3.yml
+++ b/www.nass.gov.ng/f681dbd6c1e834b6ae370b2fe9aecfedc795aae3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 23:20:50 GMT
+    - Tue, 21 Aug 2018 18:42:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ehldL27MVFQaIfLTPzk6o0; path=/
+    - PHPSESSID=rENp5o5wmSdpX%2C1bfKBx51; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 23:20:51 GMT
+recorded_at: Tue, 21 Aug 2018 18:42:42 GMT
