--- a/www.nass.gov.ng/682bf2fca1a4d8707e0420247255cd5d46775f03.yml
+++ b/www.nass.gov.ng/682bf2fca1a4d8707e0420247255cd5d46775f03.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 23:36:47 GMT
+    - Tue, 21 Aug 2018 18:54:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IHpY96BoC%2CkUMcwPblyzB3; path=/
+    - PHPSESSID=g7f-nQGxP%2C5rstGVhGvIT2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 23:36:47 GMT
+recorded_at: Tue, 21 Aug 2018 18:54:52 GMT
