--- a/www.nass.gov.ng/6289e027e6fa792b81e6659b7ca189c8bd059faa.yml
+++ b/www.nass.gov.ng/6289e027e6fa792b81e6659b7ca189c8bd059faa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 23:41:21 GMT
+    - Tue, 21 Aug 2018 18:58:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5fB3z0eQ12S2nqXa%2CXmPY0; path=/
+    - PHPSESSID=SkuqYx4z3KFNzr53Wjcj01; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 23:41:22 GMT
+recorded_at: Tue, 21 Aug 2018 18:58:47 GMT
