--- a/www.nass.gov.ng/fc22d9457586d19005ca60a3bd828daee1fa5fa4.yml
+++ b/www.nass.gov.ng/fc22d9457586d19005ca60a3bd828daee1fa5fa4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 23:55:35 GMT
+    - Tue, 21 Aug 2018 19:14:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9pLYIEs-BqFo30%2C8rSi4Q0; path=/
+    - PHPSESSID=Cf-cVTFWPb86KPnyI5PId1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 23:55:35 GMT
+recorded_at: Tue, 21 Aug 2018 19:14:39 GMT
