--- a/www.nass.gov.ng/66905bee0551c7ab1f99854de07d5650f3677f92.yml
+++ b/www.nass.gov.ng/66905bee0551c7ab1f99854de07d5650f3677f92.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 00:12:36 GMT
+    - Tue, 21 Aug 2018 19:29:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aDmH%2CipGSgaxqrfOsdS%2Ck0; path=/
+    - PHPSESSID=vB7wxgS%2C7gjPV%2CfQ7mzpL1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 00:12:36 GMT
+recorded_at: Tue, 21 Aug 2018 19:29:39 GMT
