--- a/www.nass.gov.ng/d50c45832c2d21e004a2f5ecf8edaac5f66fb825.yml
+++ b/www.nass.gov.ng/d50c45832c2d21e004a2f5ecf8edaac5f66fb825.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 01:18:18 GMT
+    - Tue, 21 Aug 2018 20:27:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2Cx8yQXbQDVdtVeM01q6QA0; path=/
+    - PHPSESSID=32FY%2CvAV7MNF3qsttDWkk2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 01:18:22 GMT
+recorded_at: Tue, 21 Aug 2018 20:27:59 GMT
