--- a/www.nass.gov.ng/b10f2adeac6ce24c281bb88ef7a9bdab3ef51bfd.yml
+++ b/www.nass.gov.ng/b10f2adeac6ce24c281bb88ef7a9bdab3ef51bfd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 01:21:45 GMT
+    - Tue, 21 Aug 2018 20:29:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XSGREQhEyZWz84m5gV%2CGc3; path=/
+    - PHPSESSID=F5nCYUZ3dTpf7xv3a7IZR2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 01:21:45 GMT
+recorded_at: Tue, 21 Aug 2018 20:29:29 GMT
