--- a/www.nass.gov.ng/dd47063596feff410eee79a2daec741bc0677f3a.yml
+++ b/www.nass.gov.ng/dd47063596feff410eee79a2daec741bc0677f3a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 01:33:01 GMT
+    - Tue, 21 Aug 2018 20:40:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UqUuZyfi2OHB%2CXTMUriJo3; path=/
+    - PHPSESSID=Q-X8Rmx9KXNhUQ5DSaWNO2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 01:33:01 GMT
+recorded_at: Tue, 21 Aug 2018 20:40:00 GMT
