--- a/www.nass.gov.ng/07a0f025b45c2cf933946ab21679cd3476d06395.yml
+++ b/www.nass.gov.ng/07a0f025b45c2cf933946ab21679cd3476d06395.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 01:36:51 GMT
+    - Tue, 21 Aug 2018 20:44:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qtveInXYOvIjGakTLvs1e1; path=/
+    - PHPSESSID=7irb3%2CbaPrvVyWB5RbT-03; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 01:36:51 GMT
+recorded_at: Tue, 21 Aug 2018 20:44:36 GMT
