--- a/www.nass.gov.ng/6f0954c8489964edc5aff4e5709e6f55bc32b5f8.yml
+++ b/www.nass.gov.ng/6f0954c8489964edc5aff4e5709e6f55bc32b5f8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 01:52:46 GMT
+    - Tue, 21 Aug 2018 21:00:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Jb5Q17mv86Ot8BovKK4dw0; path=/
+    - PHPSESSID=kNb2iIdX4O2wNnAjV%2CU161; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 01:52:46 GMT
+recorded_at: Tue, 21 Aug 2018 21:00:15 GMT
